--- a/JJs_light_ctrl_w_helpers.yaml
+++ b/JJs_light_ctrl_w_helpers.yaml
@@ -1,22 +1,27 @@
 blueprint:
-  name: Light Control With Helpers
-  description: JJs light control with helper inputs
+  name: ⚡💡 JJs Light Control With Helpers 💡⚡
+  description: Light control automation that
+    1. Wont override the current light state
+    2. Two light scenes, one for day and night
+    3. controllable via other automations via using the helpers called with the blueprint
+    4. test
   domain: automation
   source_url: https://github.com/Jeffreyjelly/jjs_light_ctrl_with_helpers/blob/main/JJs_light_ctrl_w_helpers.yaml
   author: Jeffreyjelly
   input:
-    #input_boolean for enabling of the automation
-    in_bool_auto_enable:
-      name: input_boolean helper for enabling and disabling this automation
-      selector:
-        entity:
-          domain: input_boolean
     #the light or light group to be controlled
     light_target:
       name: Light or Light Group to Target
       selector:
         entity:
           domain: light
+    #input_boolean for enabling of the automation
+    in_bool_auto_enable:
+      name: input_boolean Enable
+      description: helper for enabling and disabling this automation
+      selector:
+        entity:
+          domain: input_boolean
     #the sensor below triggers on "detected" (triggers lights to turn on)
     motion_detected_device:
       name: Motion Detection ("on" triggers the lights to turn on)
@@ -32,6 +37,12 @@ blueprint:
     #timer below controls the time it takes from no motion to dimmed lights if dimmable
     timer_on_to_dim:
       name: Timer for motion stopped to dim (time it takes from no motion to dimmed state)
+      selector:
+        entity:
+          domain: timer
+    #timer below controls the time it takes from dimmed lights to off as well as remembering last on state.
+    timer_dim_to_off:
+      name: Timer for dimmed to off and time to recover last on state before reverting to scene.
       selector:
         entity:
           domain: timer
@@ -53,12 +64,6 @@ blueprint:
       selector:
         entity:
           domain: input_number
-    #timer below controls the time it takes from dimmed lights to off as well as remembering last on state.
-    timer_dim_to_off:
-      name: Timer for dimmed to off and time to recover last on state before reverting to scene.
-      selector:
-        entity:
-          domain: timer
     #input_number for dim to off to set the above timer during the day
     in_num_dim_light_day:
       name: input_number helper for dimmed to off to set the timer during the day.
@@ -71,30 +76,6 @@ blueprint:
       selector:
         entity:
           domain: input_number
-    #time setting for day
-    in_datetime_day_time:
-      name: input_datetime helper for time for day scene.
-      selector:
-        entity:
-          domain: input_datetime
-    #scene setting for day
-    scene_day_light:
-      name: Day scene for the lights.
-      selector:
-        entity:
-          domain: scene
-    #time setting for night
-    in_datetime_night_time:
-      name: input_datetime helper for time for night light scene.
-      selector:
-        entity:
-          domain: input_datetime
-    #scene setting for night
-    scene_night_light:
-      name: Night scene for the lights.
-      selector:
-        entity:
-          domain: scene
     #input_number for transition time for light turning on
     in_num_transition_time:
       name: input_number helper for light transitioning on in seconds (suggested limit 1-10).
@@ -106,29 +87,53 @@ blueprint:
       name: input_number helper for light transitioning on in seconds for dim scenarios (suggested limit 1-3).
       selector:
         entity:
-          domain: input_number #input_number for transition time for light turning to and from dim.
+          domain: input_number
+    #time setting for day
+    in_datetime_day_time:
+      name: input_datetime helper for time for day scene.
+      selector:
+        entity:
+          domain: input_datetime
+    #time setting for night
+    in_datetime_night_time:
+      name: input_datetime helper for time for night light scene.
+      selector:
+        entity:
+          domain: input_datetime
+    #scene setting for day
+    scene_day_light:
+      name: Day scene for the lights.
+      selector:
+        entity:
+          domain: scene
+    #scene setting for night
+    scene_night_light:
+      name: Night scene for the lights.
+      selector:
+        entity:
+          domain: scene
     temp_scene_name:
       name: Temporary scene name that will be created to recover last on state (make sure it's unique)
       default: "jjs_recovery_scene_for_zone_"
 
 variables:
-  #   in_bool_auto_enable_ent: !input "in_bool_auto_enable"
   #   light_target_ent: !input "light_target"
+  #   in_bool_auto_enable_ent: !input "in_bool_auto_enable"
   #   motion_detected_device_ent: !input "motion_detected_device"
   #   motion_not_detected_device_ent: !input "motion_not_detected_device"
   #   timer_on_to_dim_ent: !input "timer_on_to_dim"
+  #   timer_dim_to_off_ent: !input "timer_dim_to_off"
   in_num_perc_dimmed_ent: !input "in_num_perc_dimmed"
   in_num_on_light_day_ent: !input "in_num_on_light_day"
   in_num_on_light_night_ent: !input "in_num_on_light_night"
-  #   timer_dim_to_off_ent: !input "timer_dim_to_off"
   in_num_dim_light_day_ent: !input "in_num_dim_light_day"
   in_num_dim_light_night_ent: !input "in_num_dim_light_night"
+  in_num_transition_time_ent: !input "in_num_transition_time"
+  in_num_transition_time_fast_ent: !input "in_num_transition_time_fast"
   #   in_datetime_day_time_ent: !input "in_datetime_day_time"
   #   scene_day_light_ent: !input "scene_day_light"
   #   in_datetime_night_time_ent: !input "in_datetime_night_time"
   #   scene_night_light_ent: !input "scene_night_light"
-  in_num_transition_time_ent: !input "in_num_transition_time"
-  in_num_transition_time_fast_ent: !input "in_num_transition_time_fast"
   temp_scene_name_ent: !input "temp_scene_name"
 
 alias: hallway new test
