--- a/JJs_light_ctrl_w_helpers.yaml
+++ b/JJs_light_ctrl_w_helpers.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "⚡\U0001F4A1 JJs Light Control With Helpers \U0001F4A1⚡"
+  name: "⚡\U0001F4A1 JJs Light Control With Helpers v1.1 \U0001F4A1⚡"
   description: " ## Light control automation that has:
 
     - Two light scenes, one for day and night
