--- a/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
+++ b/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
@@ -1,6 +1,12 @@
 blueprint:
-  name: "⚡\U0001F4A1 JJs Light Control With Helpers v1.2 \U0001F4A1⚡"
-  description: " ## Light control automation that has:
+  name: "⚡\U0001F4A1 JJs Light Control With Helpers \U0001F4A1⚡"
+  description: >
+    # JJs Light Control With Helpers
+    
+    **Version: 1.3**
+    
+    
+    ## Light control automation that has:
 
     - Two light scenes, one for day and night
 
@@ -21,200 +27,239 @@ blueprint:
     - Please see the [readme.md](https://github.com/Jeffreyjelly/jjs_light_ctrl_with_helpers/blob/main/README.md) "
   domain: automation
   source_url: https://github.com/Jeffreyjelly/jjs_light_ctrl_with_helpers/blob/main/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
-  # version: '1.2.0'
-  author: Jeffreyjelly
   input:
-    light_target:
-      name: Light
-      description: "### \U0001F4A1\n- Light or Light Group to Target"
-      selector:
-        entity:
-          domain:
-            - light
-          multiple: false
-    in_bool_auto_enable:
-      name: Input boolean enable
-      description:
-        "### \U0001F51B\n- input_boolean helper for enabling and disabling
-        this automation"
-      selector:
-        entity:
-          domain:
-            - input_boolean
-          multiple: false
-    motion_detected_device:
-      name: Motion detection
-      description:
-        "### \U0001F575️‍♂️\U0001F575️‍♀️\n- A binary_sensor input that
-        triggers the lights to turn on."
-      selector:
-        entity:
-          domain:
-            - binary_sensor
-          multiple: false
-    motion_not_detected_device:
-      name: Motion not detected
-      description:
-        "### \U0001F575️‍♀️⛔ ⛔\U0001F575️‍♂️\n- A binary_sensor that when
-        triggered off starts the first motion to dim timer.\n- Also will only
-        work to keep lights on if either of the two timers are active when this
-        gets turned to on again. "
-      selector:
-        entity:
-          domain:
-            - binary_sensor
-          multiple: false
-    timer_on_to_dim:
-      name: Timer for motion stopped to dim
-      description:
-        "### ⏲\U0001F315>\U0001F313\n- Timer used from no motion to dimmed
-        state that is set via the automation."
-      selector:
-        entity:
-          domain:
-            - timer
-          multiple: false
-    timer_dim_to_off:
-      name: Timer for dimmed to off
-      description:
-        "### ⏲\U0001F313>\U0001F311\n- Timer used from dimmed to off state
-        that is set via the automation.\n- Also used for time to recover last
-        on state before reverting to scene on the next turn on. "
-      selector:
-        entity:
-          domain:
-            - timer
-          multiple: false
-    in_num_dim_amt:
-      name: Light dimming value
-      description:
-        "### \U0001F315>\U0001F313%❔\n- input_number helper for choosing
-        how much the lights dim\n- suggested range:\n> (0 to 255) "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_on_light_day:
-      name: No motion to dim in seconds day
-      description:
-        "### ⛔\U0001F575️‍♂️>\U0001F313⏲\U0001F31E\n- input_number helper
-        for no motion to dim to set the timer during the day in seconds.\n-
-        suggested range:\n> (20s to 7200s)\n> or otherwise 20 seconds to 2
-        hours "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_on_light_night:
-      name: No motion to dim in seconds night
-      description:
-        "### ⛔\U0001F575️‍♂️>\U0001F313⏲\U0001F319\n- input_number helper
-        for no motion to dim to set the timer during the night in seconds.\n-
-        suggested range:\n> (20s to 7200s)\n> or otherwise 20 seconds to 2
-        hours "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_dim_light_day:
-      name: Dimmed to off in seconds day
-      description:
-        "### \U0001F313>\U0001F311⏲\U0001F31E\n- input_number helper for
-        dimmed to off to set the timer during the day in seconds.\n- suggested
-        range:\n> (10s to 1800s)\n> or otherwise 10 seconds to 30 minutes "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_dim_light_night:
-      name: Dimmed to off in seconds night
-      description:
-        "### \U0001F313>\U0001F311⏲\U0001F319\n- input_number helper for
-        dimmed to off to set the timer during the night in seconds.\n-
-        suggested range:\n> (10s to 1800s)\n> or otherwise 10 seconds to 30
-        minutes "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_transition_time:
-      name: Light on transition time normal
-      description: "### \U0001F4A1\U0001F199⏳\n- input_number helper for light
-        transitioning on and off in seconds\n- suggested range:\n> (1s to 10s) "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_num_transition_time_fast:
-      name: Light on transition time fast
-      description:
-        "### \U0001F4A1\U0001F199⏳⏩\n- input_number helper for light
-        transitioning to and from dimmed states in seconds. (you&rsquo;ll want
-        this fast to see the transition)\n- suggested range:\n> (1s to 3s) "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
-    in_datetime_day_time:
-      name: Datetime start for day scene
-      description:
-        "### \U0001F4C5⌚\U0001F31E\n- input_datetime helper start time
-        for activating the day scene selected below."
-      selector:
-        entity:
-          domain:
-            - input_datetime
-          multiple: false
-    in_datetime_night_time:
-      name: Datetime start for night scene
-      description:
-        "### \U0001F4C5⌚\U0001F319\n- input_datetime helper start time
-        for activating the day scene selected below."
-      selector:
-        entity:
-          domain:
-            - input_datetime
-          multiple: false
-    scene_day_light:
-      name: Day scene
-      description: "### \U0001F31E\U0001F3A8\n- scene for the day setting."
-      selector:
-        entity:
-          domain:
-            - scene
-          multiple: false
-    scene_night_light:
-      name: Night scene for the lights.
-      description: "### \U0001F319\U0001F3A8\n- scene for the night setting."
-      selector:
-        entity:
-          domain:
-            - scene
-          multiple: false
-    temp_scene_name:
-      name: Temporary scene name
-      description:
-        "### \U0001F3A8\U0001F388\n- Temporary scene name that will be
-        created to recover the last on state\n> (make sure it&rsquo;s unique
-        and doesn&rsquo;t already exist) "
-      default: jjs_recovery_scene_for_zone_
-    in_num_hold_scene:
-      name: Time to hold temporary scene
-      description: "### ⌚🎨🎈\n- input_number helper to adjust for how
-        long to hold the temporary scene that is saved in seconds.\n- suggested
-        range:\n> (1800s for 30 minutes) "
-      selector:
-        entity:
-          domain:
-            - input_number
-          multiple: false
+    light_settings:
+      name: Lights Targeted and Scenes *
+      icon: mdi:lightbulb-auto
+      description: 'lights affected by this automation and the scenes to support those lights
+      
+        '
+      collapsed: true
+      input:
+        light_target:
+          name: Light
+          description: "### \U0001F4A1\n- Light or Light Group to Target"
+          selector:
+            entity:
+              domain:
+                - light
+              multiple: false
+        scene_day_light:
+          name: Day scene
+          description: "### \U0001F31E\U0001F3A8\n- scene for the day setting."
+          selector:
+            entity:
+              domain:
+                - scene
+              multiple: false
+        scene_night_light:
+          name: Night scene for the lights.
+          description: "### \U0001F319\U0001F3A8\n- scene for the night setting."
+          selector:
+            entity:
+              domain:
+                - scene
+              multiple: false
+    trigger_settings:
+      name: Triggers for on an off *
+      icon: mdi:motion-sensor
+      description: 'Motion devices used to trigger and to sense motion is gone.
+      
+        '
+      collapsed: true
+      input:
+        motion_detected_device:
+          name: Motion detection
+          description:
+            "### \U0001F575️‍♂️\U0001F575️‍♀️\n- A binary_sensor input that
+            triggers the lights to turn on."
+          selector:
+            entity:
+              domain:
+                - binary_sensor
+              multiple: false
+        motion_not_detected_device:
+          name: Motion not detected
+          description:
+            "### \U0001F575️‍♀️⛔ ⛔\U0001F575️‍♂️\n- A binary_sensor that when
+            triggered off starts the first motion to dim timer.\n- Also will only
+            work to keep lights on if either of the two timers are active when this
+            gets turned to on again. "
+          selector:
+            entity:
+              domain:
+                - binary_sensor
+              multiple: false
+    timer_settings:
+      name: timers for the automation to run *
+      icon: mdi:timer-edit
+      description: 'Input helper timers for the automation to run.
+      
+        '
+      collapsed: true
+      input:
+        timer_on_to_dim:
+          name: Timer for motion stopped to dim
+          description:
+            "### ⏲\U0001F315>\U0001F313\n- Timer used from no motion to dimmed
+            state that is set via the automation."
+          selector:
+            entity:
+              domain:
+                - timer
+              multiple: false
+        timer_dim_to_off:
+          name: Timer for dimmed to off
+          description:
+            "### ⏲\U0001F313>\U0001F311\n- Timer used from dimmed to off state
+            that is set via the automation.\n- Also used for time to recover last
+            on state before reverting to scene on the next turn on. "
+          selector:
+            entity:
+              domain:
+                - timer
+              multiple: false
+    number_settings:
+      name: Input number settings *
+      icon: mdi:numeric
+      description: 'Input numbers the automation settings.
+      
+        '
+      collapsed: true
+      input:
+        in_num_dim_amt:
+          name: Light dimming value
+          description:
+            "### \U0001F315>\U0001F313%❔\n- input_number helper for choosing
+            how much the lights dim\n- suggested range:\n> (0 to 255) "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_on_light_day:
+          name: No motion to dim in seconds day
+          description:
+            "### ⛔\U0001F575️‍♂️>\U0001F313⏲\U0001F31E\n- input_number helper
+            for no motion to dim to set the timer during the day in seconds.\n-
+            suggested range:\n> (20s to 7200s)\n> or otherwise 20 seconds to 2
+            hours "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_on_light_night:
+          name: No motion to dim in seconds night
+          description:
+            "### ⛔\U0001F575️‍♂️>\U0001F313⏲\U0001F319\n- input_number helper
+            for no motion to dim to set the timer during the night in seconds.\n-
+            suggested range:\n> (20s to 7200s)\n> or otherwise 20 seconds to 2
+            hours "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_dim_light_day:
+          name: Dimmed to off in seconds day
+          description:
+            "### \U0001F313>\U0001F311⏲\U0001F31E\n- input_number helper for
+            dimmed to off to set the timer during the day in seconds.\n- suggested
+            range:\n> (10s to 1800s)\n> or otherwise 10 seconds to 30 minutes "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_dim_light_night:
+          name: Dimmed to off in seconds night
+          description:
+            "### \U0001F313>\U0001F311⏲\U0001F319\n- input_number helper for
+            dimmed to off to set the timer during the night in seconds.\n-
+            suggested range:\n> (10s to 1800s)\n> or otherwise 10 seconds to 30
+            minutes "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_transition_time:
+          name: Light on transition time normal
+          description: "### \U0001F4A1\U0001F199⏳\n- input_number helper for light
+            transitioning on and off in seconds\n- suggested range:\n> (1s to 10s) "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_transition_time_fast:
+          name: Light on transition time fast
+          description:
+            "### \U0001F4A1\U0001F199⏳⏩\n- input_number helper for light
+            transitioning to and from dimmed states in seconds. (you&rsquo;ll want
+            this fast to see the transition)\n- suggested range:\n> (1s to 3s) "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+        in_num_hold_scene:
+          name: Time to hold temporary scene
+          description: "### ⌚🎨🎈\n- input_number helper to adjust for how
+            long to hold the temporary scene that is saved in seconds.\n- suggested
+            range:\n> (1800s for 30 minutes) "
+          selector:
+            entity:
+              domain:
+                - input_number
+              multiple: false
+    datetime_settings:
+      name: datetime settings *
+      icon: mdi:clipboard-text-clock-outline
+      description: 'datetime settings.
+      
+        '
+      collapsed: true
+      input:
+        in_datetime_day_time:
+          name: Datetime start for day scene
+          description:
+            "### \U0001F4C5⌚\U0001F31E\n- input_datetime helper start time
+            for activating the day scene selected below."
+          selector:
+            entity:
+              domain:
+                - input_datetime
+              multiple: false
+        in_datetime_night_time:
+          name: Datetime start for night scene
+          description:
+            "### \U0001F4C5⌚\U0001F319\n- input_datetime helper start time
+            for activating the day scene selected below."
+          selector:
+            entity:
+              domain:
+                - input_datetime
+              multiple: false
+    boolean_settings:
+      name: Automation logic settings *
+      icon: mdi:toggle-switch
+      description: 'Automation boolean settings.
+      
+        '
+      collapsed: true
+      input:
+        in_bool_auto_enable:
+          name: Input boolean enable
+          description:
+            "### \U0001F51B\n- input_boolean helper for enabling and disabling
+            this automation"
+          selector:
+            entity:
+              domain:
+                - input_boolean
+              multiple: false
 variables:
   light_target_ent: !input light_target
   in_num_dim_amt_ent: !input in_num_dim_amt
@@ -224,7 +269,9 @@ variables:
   in_num_dim_light_night_ent: !input in_num_dim_light_night
   in_num_transition_time_ent: !input in_num_transition_time
   in_num_transition_time_fast_ent: !input in_num_transition_time_fast
-  temp_scene_name_ent: !input temp_scene_name
+  # create the temp scene name based off this automation's ID
+  temp_scene_name_ent: >-
+    jjs_recovery_scene_for_zone_{{ this.entity_id.split('.')[-1] }}
   in_num_hold_scene_ent: !input in_num_hold_scene
 alias: JJs light ctrl with helpers
 description: ""
@@ -424,7 +471,7 @@ action:
                   - service: scene.create
                     data:
                       snapshot_entities: !input light_target
-                      scene_id: !input temp_scene_name
+                      scene_id: "{{ temp_scene_name_ent }}"
                     enabled: true
                   # - delay:
                   #     hours: 0
